<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E76060"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#6ED2D5"
        app:fabCustomSize="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/camara"
        app:tint="@android:color/white"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:clickable="true"
        app:backgroundTint="#F2D2F1EE"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/camera"
        app:layout_constraintStart_toEndOf="@+id/camera"
        app:srcCompat="@drawable/guardar"
        app:tint="@android:color/white"
        tools:ignore="ImageContrastCheck"
        android:focusable="true"
        android:contentDescription="@string/gallery" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        app:backgroundTint="#F2D2F1EE"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/camera"
        app:layout_constraintEnd_toStartOf="@+id/camera"
        app:srcCompat="@drawable/calendario"
        app:tint="@android:color/white"
        tools:ignore="ImageContrastCheck"
        android:focusable="true"
        android:contentDescription="@string/calendar" />

    <ImageView
        android:id="@+id/bg"
        android:layout_width="284dp"
        android:layout_height="290dp"
        app:layout_constraintBottom_toBottomOf="@+id/polaroid"
        app:layout_constraintEnd_toEndOf="@+id/polaroid"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/polaroid"
        app:layout_constraintTop_toTopOf="@+id/polaroid"
        app:layout_constraintVertical_bias="0.22"
        app:srcCompat="@drawable/cuadrado"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="284dp"
        android:layout_height="290dp"
        app:layout_constraintBottom_toBottomOf="@+id/polaroid"
        app:layout_constraintEnd_toEndOf="@+id/polaroid"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/polaroid"
        app:layout_constraintTop_toTopOf="@+id/polaroid"
        app:layout_constraintVertical_bias="0.22"
        app:srcCompat="@drawable/cuadrado"
        android:contentDescription="@string/your_picture" />

    <ImageView
        android:id="@+id/polaroid"
        android:layout_width="325dp"
        android:layout_height="398dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/polaroid"
        android:contentDescription="@string/polaroid_frame" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/name"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/polaroid"
        app:layout_constraintEnd_toEndOf="@+id/polaroid"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/polaroid"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/salida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:contentDescription="@string/calendar"
        android:focusable="true"
        app:backgroundTint="#F2D2F1EE"
        app:fabCustomSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/salida"
        app:tint="@android:color/white"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>